# ens-normalize-rs

./: Cargo.toml  LICENCE  README.md
.github/workflows/: tests.yml  unicode-update.yml
examples/: benchmark.rs  normalize.rs  simple.rs  tokens.rs
src/: beautify.rs  constants.rs  error.rs  join.rs  lib.rs  normalizer.rs  process.rs  utils.rs  validate.rs
src/code_points/: constants.rs  inspector.rs  mod.rs  specs.rs  types.rs
src/static_data/: mod.rs  nf.rs  nf_json.rs  spec.rs  spec_json.rs
src/tokens/: mod.rs  tokenize.rs  tokenizer.rs  types.rs
tests/: e2e.rs  ens_doc_cases.rs  ens_tests.rs  simple.rs
tools/: unicode-update.py
