[package]
name = "ens-norm-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
lazy_static = "1.5.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
unicode-normalization = "0.1.24"
unicode-segmentation = "1.12.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.23.0"
