[package]
name = "ens-normalize-rs"
version = "0.1.0"
edition = "2021"

[profile.bench]
debug = true

[dependencies]
anyhow = "1.0.93"
itertools = "0.13.0"
lazy_static = "1.5.0"
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
serde-aux = "4.5.0"
serde_json = "1.0.133"
serde_plain = "1.0.2"
serde_with = "3.11.0"
thiserror = "2.0.3"
unicode-normalization = "0.1.24"

[dev-dependencies]
pretty_assertions = "1.4.1"
rayon = "1.10.0"
rstest = "0.23.0"
